--- a/views/listaProductos.hbs
+++ b/views/listaProductos.hbs
@@ -1,5 +1,5 @@
  <h1>Lista de productos</h1>
-
+{{#if listExists}}
  <table class="table table-striped table-dark">
         <thead>
                 <tr>
@@ -20,3 +20,7 @@
         {{/each}}
         </tbody>
  </table>
+
+ {{/if}}
+
+ {{else}}
